fix: primary and secondary navigation on mobile - hide secondary navigation on mobile - fix primary navigation collapse on mobile - simplify stylesheet declarations

--- a/frontend/src/components/Navigation/_Navigation.scss
+++ b/frontend/src/components/Navigation/_Navigation.scss
@@ -3,8 +3,10 @@
   &:hover,
   &:focus-within,
   &.is-pinned {
-      grid-area: nav;
+    grid-area: nav;
+    @media only screen and (min-width: ($breakpoint-small + 1)) {
       position: static;
+    }
     .l-navigation__controls {
       opacity: 1;
       visibility: visible;
@@ -23,6 +25,10 @@
         transform: rotate(180deg);
       }
     }
+  }
+  .l-navigation__drawer {
+    // ensures the drawer never exceeds the viewport width on mobile
+    max-width: 100vw;
   }
   .l-navigation__controls {
     margin-left: auto;
@@ -45,7 +51,6 @@
   .l-navigation--item-icon {
     margin-right: $sph--small;
   }
-  
 }
 .p-panel.is-dark {
   .p-panel__header {
