--- a/frontend/src/components/SecondaryNavigation/_SecondaryNavigation.scss
+++ b/frontend/src/components/SecondaryNavigation/_SecondaryNavigation.scss
@@ -2,26 +2,25 @@
   transition-duration: 0.165s;
   transition-property: width, box-shadow, background;
   transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  background: #444444;
   width: 0;
+  height: 0;
   visibility: hidden;
 
   &.is-open {
     visibility: visible;
     width: 100%;
+    height: 100%;
     @media (min-width: $breakpoint-small) {
       width: $application-layout--side-nav-width-expanded;
     }
   }
-
-  &,
   .p-side-navigation__drawer {
-    background: #444444;
-    height: 100%;
-  }
-  .p-side-navigation__drawer {
+    background: inherit;
     transform: none;
     position: static;
     max-width: 100%;
+    height: inherit;
   }
   .p-side-navigation__title {
     @extend %vf-heading-4;
